# ai-anki-cards

./: CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  PRE_COMMIT_FIXES.md  README.md  ankigen_wrapper.sh  card-metrics.yml  model_info.yml  prompts.md  providers.yml  pyproject.toml  requirements.txt  sample_config.yaml  test_export_suffix.py  test_mcq.py
ankigen/: __init__.py  __main__.py  cli.py  exceptions.py
ankigen/cards_templates/: cards_templates.md
ankigen/cards_templates/Basic-Card/: back.html  items.txt  items.with_type.txt  items.yml  meta.yml  prompt.j2
ankigen/cards_templates/Cloze-Card/: items.txt  items.with_type.txt  items.yml  meta.yml  prompt.j2
ankigen/cards_templates/MCQ-Card/: back.html  front.html  items.txt  items.with_type.txt  items.yml  meta.yml  prompt.j2
ankigen/cards_templates/Poem/: back.html  back_simple.html  front.html  items.txt  items.with_type.txt  meta.yml  styling.css
ankigen/cli/: __init__.py  config_handler.py  export_coordinator.py  input_handler.py  interactive.py  preview_handler.py
ankigen/config/: default.yaml
ankigen/core/: card_deduplicator.py  card_factory.py  card_filter.py  card_generator.py  card_reader.py  config_loader.py  content_chunker.py  estimator.py  exporter.py  exporter_utils.py  field_mapper.py  llm_engine.py  parser.py  prompt_template.py  response_parser.py  stats.py  stats_display.py  tags_loader.py  template_loader.py
ankigen/core/providers/: __init__.py  base.py  openai_compatible.py
ankigen/models/: card.py  config.py
ankigen/utils/: cache.py  guid.py  logger.py  token_counter.py
docs/: CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  PRE_COMMIT_SETUP.md  Skills.md  TOOLS_QUICK_START.md  prompt模板.md  软件设计流程和规范经验指导.md
scripts/: check_code_quality.sh  demo_interactive.py  quick_check.sh
tests/: conftest.py  test_card_generator.py  test_card_type_fix.py  test_cli.py  test_estimator.py  test_export_suffix.py  test_exporter.py  test_interactive.py  test_interactive_improved.py  test_llm_engine.py  test_mcq.py  test_mcq_field_mapping.py  test_parsed_cards_json.py  test_parser.py  test_stats_and_api_response.py  test_template_exporters.py
tests/fixtures/: sample.md  sample.txt
tests/integration/: __init__.py  test_interactive_cli.py
