[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 明确指定只包含 ankigen 包，避免自动发现其他目录（如 logs, output）
packages = ["ankigen"]

[tool.setuptools.package-data]
# 包含模板和配置文件
ankigen = ["cards_templates/**/*", "config/**/*"]

[project]
name = "ankigen"
version = "0.1.0"
description = "A production-grade Python CLI tool for generating Anki cards from text/Markdown files using LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "AnkiGen Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "jinja2>=3.1.0",
    "genanki>=0.13.0",
    "tiktoken>=0.5.0",
    "markdown>=3.5.0",
    "python-frontmatter>=1.0.0",
    "chardet>=5.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pydocstyle>=6.3.0",
]
security = [
    "bandit>=1.7.5",
    "safety>=2.3.5",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]

[project.scripts]
ankigen = "ankigen.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=ankigen --cov-report=html --cov-report=term-missing --cov-report=xml"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from (typer.Exit is intentional)
    "ARG001", # unused function argument (may be used by frameworks)
    "ARG002", # unused method argument
    "RUF001", # 允许中文标点符号（全角逗号、括号等）
    "RUF002", # 允许中文标点符号
    "RUF003", # 允许中文标点符号
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports allowed in __init__.py
"tests/**/*.py" = ["ARG", "F401", "S101"]  # allow unused args, imports, and assert in tests

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "genanki.*",
    "frontmatter.*",
    "tiktoken.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]  # assert_used (allowed in tests)

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"
match_dir = "(?!tests|venv|\\.venv|build|dist)"
